Revert "feat: implement core infrastructure management modules for AIS, VTS, Dike/Revetment, and Navigation Channel systems"
This reverts commit a26a5c5a039e079290c9912f7713de2e28c5e428.